--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
               {{ post.date | date: date_format }}
             </time>
             {%- if post.tags and post.tags.size > 0 -%}
-              • <span class="post-tags">
+              ⋅ <span class="post-tags">
                 {%- for tag in post.tags -%}
                   <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a> {{ ' ' }}
                 {%- endfor -%}
