--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,10 @@ layout: default
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+        ⋅ <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
       {%- if page.tags and page.tags.size > 0 -%}
-        • <span class="post-tags">
+        ⋅ <span class="post-tags">
           {%- for tag in page.tags -%}
             <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a> {{ ' ' }}
           {%- endfor -%}
