--- a/assets/main.scss
+++ b/assets/main.scss
@@ -275,32 +275,32 @@ img {
       display: block;
       object-fit: contain;
     }
-  }
 
-}
+    ul:has(li img) {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      gap: 1em;
+      padding: 0;
+      margin: 3em 0;
 
-@media (min-width: 1024px) {
-  .post-content ul:has(li img) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-    list-style: none;
-    padding: 0;
-    margin: 0 0 2em 0;
-  }
-  .post-content ul:has(li img) li {
-    flex: 1 1 calc(50% - 0.5em);
-    max-width: calc(50% - 0.5em);
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-  }
-  .post-content ul:has(li img) img {
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: contain;
+      li {
+        flex: 1 1 calc(50% - 0.5em);
+        max-width: calc(50% - 0.5em);
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: contain;
+        margin: 0;
+      }
+    }
   }
 }
