--- a/assets/main.scss
+++ b/assets/main.scss
@@ -183,8 +183,8 @@ img {
 .post-description {
   color: #9c9c9c;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
-  line-clamp: 3;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   box-orient: vertical;
   overflow: hidden;
@@ -261,8 +261,9 @@ img {
   .post-card {
     flex: 1 1 calc(50% - 1.5em);
     max-width: calc(50% - 1.5em);
-    height: 460px;
+    height: 456px;
     box-sizing: border-box;
+    gap: 1.5em;
 
     &:first-child {
       flex-direction: row;
